ui fix on table spacing listing page

--- a/templatestore/frontend/src/style/home.less
+++ b/templatestore/frontend/src/style/home.less
@@ -10,10 +10,9 @@
           margin: 20px 0;
      }
      .tableWrapper {
-          height: 60vh;
+          height: 80vh;
           overflow: auto;
-          margin-top: 40px;
-          margin-bottom: 20px;
+          margin-top: 15px;
           thead {
                background-color: #dedede;
           }
